// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot-Profile — sichert stille Engine-Drift ab > Profil 1: Einzelperson ledig ZH, 100k, Pension 65 1`] = `
[
  {
    "ahv": 0,
    "ausgaben": 74600,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2026,
    "netto": 625400,
    "steuern": 14600,
  },
  {
    "ahv": 0,
    "ausgaben": 74600,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2027,
    "netto": 675300,
    "steuern": 14600,
  },
  {
    "ahv": 0,
    "ausgaben": 74600,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2028,
    "netto": 725500,
    "steuern": 14600,
  },
  {
    "ahv": 0,
    "ausgaben": 74700,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2029,
    "netto": 776000,
    "steuern": 14700,
  },
  {
    "ahv": 15100,
    "ausgaben": 57400,
    "bvg": 12500,
    "einkommen": 77600,
    "jahr": 2030,
    "netto": 321700,
    "steuern": 9400,
  },
  {
    "ahv": 32800,
    "ausgaben": 54800,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2031,
    "netto": 329600,
    "steuern": 6800,
  },
  {
    "ahv": 32800,
    "ausgaben": 54800,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2032,
    "netto": 337500,
    "steuern": 6800,
  },
  {
    "ahv": 32800,
    "ausgaben": 54900,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2033,
    "netto": 345400,
    "steuern": 6900,
  },
  {
    "ahv": 32800,
    "ausgaben": 54900,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2034,
    "netto": 353300,
    "steuern": 6900,
  },
  {
    "ahv": 32800,
    "ausgaben": 54900,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2035,
    "netto": 361200,
    "steuern": 6900,
  },
]
`;

exports[`Snapshot-Profile — sichert stille Engine-Drift ab > Profil 2: Paar verheiratet ZH, 100k+80k, beide 65 1`] = `
[
  {
    "ahv": 0,
    "ausgaben": 86500,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2026,
    "netto": 993500,
    "steuern": 26500,
  },
  {
    "ahv": 0,
    "ausgaben": 86600,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2027,
    "netto": 1135900,
    "steuern": 26600,
  },
  {
    "ahv": 0,
    "ausgaben": 86700,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2028,
    "netto": 1278900,
    "steuern": 26700,
  },
  {
    "ahv": 0,
    "ausgaben": 86900,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2029,
    "netto": 1422300,
    "steuern": 26900,
  },
  {
    "ahv": 29400,
    "ausgaben": 64900,
    "bvg": 22500,
    "einkommen": 141900,
    "jahr": 2030,
    "netto": 650200,
    "steuern": 16900,
  },
  {
    "ahv": 49100,
    "ausgaben": 60400,
    "bvg": 54000,
    "einkommen": 103100,
    "jahr": 2031,
    "netto": 693000,
    "steuern": 12400,
  },
  {
    "ahv": 49100,
    "ausgaben": 60500,
    "bvg": 54000,
    "einkommen": 103100,
    "jahr": 2032,
    "netto": 735700,
    "steuern": 12500,
  },
  {
    "ahv": 49100,
    "ausgaben": 60600,
    "bvg": 54000,
    "einkommen": 103100,
    "jahr": 2033,
    "netto": 778300,
    "steuern": 12600,
  },
  {
    "ahv": 49100,
    "ausgaben": 60600,
    "bvg": 54000,
    "einkommen": 103100,
    "jahr": 2034,
    "netto": 820800,
    "steuern": 12600,
  },
  {
    "ahv": 49100,
    "ausgaben": 60800,
    "bvg": 54000,
    "einkommen": 103100,
    "jahr": 2035,
    "netto": 863100,
    "steuern": 12800,
  },
]
`;

exports[`Snapshot-Profile — sichert stille Engine-Drift ab > Profil 3: Paar Konkubinat ZH (sollte ≠ Verheiratet) 1`] = `
[
  {
    "ahv": 0,
    "ausgaben": 84100,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2026,
    "netto": 995900,
    "steuern": 24100,
  },
  {
    "ahv": 0,
    "ausgaben": 84200,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2027,
    "netto": 1140800,
    "steuern": 24200,
  },
  {
    "ahv": 0,
    "ausgaben": 84300,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2028,
    "netto": 1286200,
    "steuern": 24300,
  },
  {
    "ahv": 0,
    "ausgaben": 84400,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2029,
    "netto": 1432200,
    "steuern": 24400,
  },
  {
    "ahv": 29400,
    "ausgaben": 64100,
    "bvg": 22500,
    "einkommen": 141900,
    "jahr": 2030,
    "netto": 660900,
    "steuern": 16100,
  },
  {
    "ahv": 63700,
    "ausgaben": 60300,
    "bvg": 54000,
    "einkommen": 117700,
    "jahr": 2031,
    "netto": 718300,
    "steuern": 12300,
  },
  {
    "ahv": 63700,
    "ausgaben": 60400,
    "bvg": 54000,
    "einkommen": 117700,
    "jahr": 2032,
    "netto": 775600,
    "steuern": 12400,
  },
  {
    "ahv": 63700,
    "ausgaben": 60500,
    "bvg": 54000,
    "einkommen": 117700,
    "jahr": 2033,
    "netto": 832700,
    "steuern": 12500,
  },
  {
    "ahv": 63700,
    "ausgaben": 60600,
    "bvg": 54000,
    "einkommen": 117700,
    "jahr": 2034,
    "netto": 889800,
    "steuern": 12600,
  },
  {
    "ahv": 63700,
    "ausgaben": 60800,
    "bvg": 54000,
    "einkommen": 117700,
    "jahr": 2035,
    "netto": 946700,
    "steuern": 12800,
  },
]
`;

exports[`Snapshot-Profile — sichert stille Engine-Drift ab > Profil 4: Einzelperson hoch ZG, 200k, Pension 65 1`] = `
[
  {
    "ahv": 0,
    "ausgaben": 90000,
    "bvg": 0,
    "einkommen": 200000,
    "jahr": 2026,
    "netto": 710000,
    "steuern": 30000,
  },
  {
    "ahv": 0,
    "ausgaben": 90100,
    "bvg": 0,
    "einkommen": 200000,
    "jahr": 2027,
    "netto": 844500,
    "steuern": 30100,
  },
  {
    "ahv": 0,
    "ausgaben": 90200,
    "bvg": 0,
    "einkommen": 200000,
    "jahr": 2028,
    "netto": 979200,
    "steuern": 30200,
  },
  {
    "ahv": 0,
    "ausgaben": 90300,
    "bvg": 0,
    "einkommen": 200000,
    "jahr": 2029,
    "netto": 1114000,
    "steuern": 30300,
  },
  {
    "ahv": 15100,
    "ausgaben": 63000,
    "bvg": 12500,
    "einkommen": 127600,
    "jahr": 2030,
    "netto": 704000,
    "steuern": 15000,
  },
  {
    "ahv": 32800,
    "ausgaben": 52600,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2031,
    "netto": 714200,
    "steuern": 4600,
  },
  {
    "ahv": 32800,
    "ausgaben": 52600,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2032,
    "netto": 724300,
    "steuern": 4600,
  },
  {
    "ahv": 32800,
    "ausgaben": 52600,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2033,
    "netto": 734400,
    "steuern": 4600,
  },
  {
    "ahv": 32800,
    "ausgaben": 52700,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2034,
    "netto": 744500,
    "steuern": 4700,
  },
  {
    "ahv": 32800,
    "ausgaben": 52700,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2035,
    "netto": 754600,
    "steuern": 4700,
  },
]
`;

exports[`Snapshot-Profile — sichert stille Engine-Drift ab > Profil 5: Reform 2030 — Eigenheim ZH (vor/nach 2030) 1`] = `
[
  {
    "ahv": 0,
    "ausgaben": 86500,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2028,
    "netto": 1562900,
    "steuern": 17500,
  },
  {
    "ahv": 0,
    "ausgaben": 86500,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2029,
    "netto": 1601500,
    "steuern": 17500,
  },
  {
    "ahv": 15100,
    "ausgaben": 67200,
    "bvg": 12500,
    "einkommen": 77600,
    "jahr": 2030,
    "netto": 1137400,
    "steuern": 10200,
  },
  {
    "ahv": 32800,
    "ausgaben": 64600,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2031,
    "netto": 1135600,
    "steuern": 7600,
  },
  {
    "ahv": 32800,
    "ausgaben": 64600,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2032,
    "netto": 1133700,
    "steuern": 7600,
  },
]
`;

exports[`Snapshot-Profile — sichert stille Engine-Drift ab > Profil 6: Vorbezug AHV 63 — Einzelperson 1`] = `
[
  {
    "ahv": 0,
    "ausgaben": 74600,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2026,
    "netto": 625400,
    "steuern": 14600,
  },
  {
    "ahv": 0,
    "ausgaben": 74600,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2027,
    "netto": 700500,
    "steuern": 14600,
  },
  {
    "ahv": 13100,
    "ausgaben": 69300,
    "bvg": 11200,
    "einkommen": 124300,
    "jahr": 2028,
    "netto": 305700,
    "steuern": 21300,
  },
  {
    "ahv": 28300,
    "ausgaben": 79100,
    "bvg": 27000,
    "einkommen": 155300,
    "jahr": 2029,
    "netto": 381900,
    "steuern": 31100,
  },
  {
    "ahv": 28300,
    "ausgaben": 64500,
    "bvg": 27000,
    "einkommen": 105300,
    "jahr": 2030,
    "netto": 422700,
    "steuern": 16500,
  },
  {
    "ahv": 28300,
    "ausgaben": 53700,
    "bvg": 27000,
    "einkommen": 55300,
    "jahr": 2031,
    "netto": 424300,
    "steuern": 5700,
  },
  {
    "ahv": 28300,
    "ausgaben": 53700,
    "bvg": 27000,
    "einkommen": 55300,
    "jahr": 2032,
    "netto": 425900,
    "steuern": 5700,
  },
]
`;
